# WalletRegisteService

./: Cargo.toml  README.md  cert.json  create_database.sql
src/: admin_cert.rs  admin_wallet.rs  config.rs  config_command.rs  main.rs  response.rs  wallet.rs
