[package]
name = "wallet_registe_service"
version = "0.1.0"
authors = ["luo4lu <luo4lu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
log = { version = "0.4.5", features = ["std"] }
simple_logger = "0.5"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["fs","full"] }
#备用方法
#rust-crypto = "0.2.36"
hex = "0.4"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal"}
asymmetric-crypto = { git = "https://github.com/Yinet-project/asymmetric-crypto" }
dislog-hal-sm2 = { git = "https://github.com/Yinet-project/dislog-hal-sm2"}
tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }
deadpool-postgres = "0.5.5"

[dev-dependencies]
#测试时使用

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]